2015-02-18 Added property Is Click Disabled in Text Audio module
2015-02-18 Fixed rendering LaTeX in Double State Button module
2015-02-18 Fixed CSS classes in Connecting Dots module
2015-02-18 Added new property Keep state and position to IWB Toolbar
2015-02-17 Fixed translation of properties in Count and Graph and Basic Math Gaps modules
2015-02-17 Fixed setting visibility on IE9 in Double State Button module
2015-02-17 Fixed issue with vocabulary files in Text Audio module
2015-02-17 Fixed adding CSS classes in Shape Tracing module
2015-02-17 Added Show Answers to Multiple Gap module
2015-02-13 Fixed problem with changed visibility of drawing in IE9 and IE10
2015-02-12 Fixed opacity property name in Drawing module
2015-02-11 Fixed issue with playing vocabulary on second click in Text Audio module on iOS 8.1.3
2015-02-11 Fixed issue with playing wrong words on first try in Text Audio module
2015-02-10 Fixed parsing HTML in Text Audio module
2015-02-10 Added "Start from" property in Page Counter module
2015-02-09 Revert parsing HTML in Text Audio module
2015-02-09 Added Is Not Activity property in Hangman module
2015-02-09 Fixed counting score in Count and Graph module
2015-02-09 Fixed reacting to Show Answers events in Double State Button and Single State Button modules
2015-02-09 Added getView(), show() and hide() commands to Error Counter module
2015-02-06 Added parsing HTML in Text Audio module
2015-02-06 Fixed issue with Show Answer in Shape Tracing module
2015-02-06 Added new css class to Basic Math Gaps module 
2015-02-06 Added Show Answers to Count and Graph module
2015-02-06 Added new property Signs to to Basic Math Gaps module
2015-02-05 Added translations for almost all remaining addons properties names
2015-02-05 Fixed problem with scaling enlarged image in Zoom Image module
2015-02-04 Changed icon and translated property names in Sudoku module
2015-02-02 Fixed PageProgress score alignment when command Show is executed after ShowErrosEvent