@@ -1,3 +1,4 @@
+2015-02-18 Fixed issue with working module on header in Animated Progress module
 2015-02-18 Added property Is Click Disabled in Text Audio module
 2015-02-18 Fixed rendering LaTeX in Double State Button module
 2015-02-18 Fixed CSS classes in Connecting Dots module
